Compass internship project

--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "gsap": "^3.12.5",
+    "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plx": "^2.1.2",
-    "smooth-scrollbar": "^8.8.4"
+    "react-router-dom": "^6.23.0",
+    "smooth-scrollbar": "^8.8.4",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
